Avoid wrapping problems with negative margins
Bug: T245793

--- a/src/themes/wikimediaui/widgets.less
+++ b/src/themes/wikimediaui/widgets.less
@@ -287,7 +287,7 @@
 	padding: @padding-vertical-label 0;
 
 	&:first-child {
-		margin-top: -@padding-vertical-label;
+		padding-top: 0;
 	}
 
 	&.oo-ui-labelElement > .oo-ui-labelElement-label {
@@ -309,8 +309,7 @@
 		padding: @padding-vertical-label 0;
 
 		&:first-child {
-			// `@padding-vertical-label` used as negative `margin-top` here.
-			margin-top: -@padding-vertical-label;
+			padding-top: 0;
 		}
 	}
 }
@@ -1260,7 +1259,7 @@
 	padding: @padding-vertical-label 0;
 
 	&:first-child {
-		margin-top: -@padding-vertical-label;
+		padding-top: 0;
 	}
 
 	&.oo-ui-labelElement > .oo-ui-labelElement-label {
@@ -1290,8 +1289,7 @@
 		padding: @padding-vertical-label 0;
 
 		&:first-child {
-			// `@padding-vertical-label` used as negative `margin-top` here.
-			margin-top: -@padding-vertical-label;
+			padding-top: 0;
 		}
 	}
 }
